--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,25 @@ address{
     margin:0px;
     color:#0f0f0f;
 }
+
+/*navbar*/
+.main-btn{
+    display: inline-block;
+    padding: 0.62rem 1.87rem;
+    background-color: #fe91c7;
+    border: 0.1875rem solid #fe91c7;
+    color: white;
+    font-weight: 600;
+    font-size: 0.9375rem;
+    box-shadow: 0px 2px 10px -1px rgb(0, 0,0 /19%);
+    padding: 0.3125rem 1.4365rem;
+    margin-left: 0.625rem;
+}
+.main-btn:hover{
+    background-color: transparent;
+    color: #fe91c7;
+}
+.nav-item{
+    padding: 0 0.625rem;
+    font-weight: 500;
+}
